# invoice-ocr-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
invoice_ocr/: api.py  hooks.py  modules.txt
invoice_ocr/ai/: confidence.py  ocr_agent.py  ocr_engine.py  ocr_nodes.py  prompts.py  validation.py
invoice_ocr/ai/agents/: header_agent.py  items_agent.py  layout_agent.py  reflection_agent.py  tax_agent.py
invoice_ocr/config/: desktop.py
invoice_ocr/intelligence/: supplier_matcher.py  supplier_memory.py
invoice_ocr/invoice_ocr/doctype/invoice_ocr/: invoice_ocr.js  invoice_ocr.json  invoice_ocr.py  test_invoice_ocr.py
invoice_ocr/invoice_ocr/doctype/supplier_ai_profile/: supplier_ai_profile.json
invoice_ocr/public/js/: invoice_ocr.js
invoice_ocr/vision/: ocr_engine.py
zikpro_invoice_ocr/: api.py  hooks.py  modules.txt
zikpro_invoice_ocr/ai/: ocr_agent.py  ocr_nodes.py  validation.py
zikpro_invoice_ocr/ai/agents/: context_builder.py  header_agent.py  items_agent.py  reflection_agent.py  tax_agent.py
zikpro_invoice_ocr/config/: desktop.py
zikpro_invoice_ocr/intelligence/: financial_validator.py  line_classifier.py  supplier_matcher.py
zikpro_invoice_ocr/public/js/: invoice_ocr.js
zikpro_invoice_ocr/vision/: ocr_engine.py
zikpro_invoice_ocr/zikpro_invoice_ocr/doctype/deepinfra_settings/: deepinfra_settings.js  deepinfra_settings.json  deepinfra_settings.py  test_deepinfra_settings.py
zikpro_invoice_ocr/zikpro_invoice_ocr/doctype/invoice_ocr/: invoice_ocr.json
zikpro_invoice_ocr/zikpro_invoice_ocr/doctype/supplier_ai_profile/: supplier_ai_profile.js  (+2 more)
