[project]
name = "invoice_ocr"
authors = [
    { name = "zikpro", email = "arshikhan229@gmail.com" }
]
description = "AI-based Invoice OCR to Purchase Invoice automation for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

# Minimal production dependencies
dependencies = [
    "requests>=2.28.0"
    "pdf2image>=1.16.3",
    "Pillow>=9.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Developer-only dependencies
[tool.bench.dev-dependencies]
# Add dev packages here if needed

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
