[project]
name = "zikpro_invoice_ocr"
version = "0.0.2
description = "AI-based Invoice OCR to Purchase Invoice automation for ERPNext"
authors = [
    { name = "zikpro", email = "info@zikpro.com" }
]
requires-python = ">=3.10"

dependencies = [
    "requests>=2.28.0",
    "pypdf>=4.0.0"
]

[tool.frappe]
required_apps = [
    "frappe",
    "erpnext"
]

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"